[package]
name = "cnctd_solana"
version = "0.1.0"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "tools for interacting between the cnctd ecosystem and the solana blockchain."
repository = "https://github.com/Connected-Dot/cnctd_solana"
license = "MIT"
keywords = ["module"]

[dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
solana-client = "2.2.0"
solana-sdk = "2.2.1"
tokio = { version = "1.43.0", features = ["full"] }
