[package]
name = "cnctd_solana"
version = "0.1.5"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "tools for interacting between the cnctd ecosystem and the solana blockchain."
repository = "https://github.com/Connected-Dot/cnctd_solana"
license = "MIT"
keywords = ["module"]

[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
solana-client = "2.2.0"
solana-sdk = "2.2.1"
borsh = "1.5.5"
tokio = { version = "1.43.0", features = ["full"] }
sha2 = "0.10.8"
base64 = "0.22.1"
spl-token-2022 = "7.0.0"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
