[package]
name = "cnctd_solana"
version = "0.1.11"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "tools for interacting between the cnctd ecosystem and the solana blockchain."
repository = "https://github.com/Connected-Dot/cnctd_solana"
license = "MIT"
keywords = ["module"]

[dependencies]
anyhow = "1.0.99"
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
solana-client = "3.0.0"
solana-sdk = "3.0.0"
borsh = "1.5.7"
tokio = { version = "1.47.1", features = ["full"] }
sha2 = "0.10.9"
base64 = "0.22.1"
spl-token-2022 = "9.0.0"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
solana-transaction-status = "3.0.0"
mpl-token-metadata = "5.1.1"
solana-account-decoder-client-types = "3.0.0"
serde_json = "1.0.143"
reqwest = "0.12.23"
solana-commitment-config = "3.0.0"
solana-address = "1.0.0"
spl-associated-token-account-interface = "2.0.0"
solana-compute-budget-interface = "3.0.0"
solana-system-interface = "2.0.0"
solana-cluster-type = "3.0.0"
